# nixcache-oci

./: .gitignore  AGENTS.md  Cargo.toml  README.md  action.yml  default.nix  flake.nix
.github/workflows/: gc-cache.yml  publish-cache.yml  release-binaries.yml  test.yml  update-and-cache.yml
crates/nixcache-builder/: Cargo.toml
crates/nixcache-builder/src/: main.rs  nix.rs  pipeline.rs
crates/nixcache-oci/: Cargo.toml
crates/nixcache-oci/src/: lib.rs
crates/nixcache-proxy/: Cargo.toml
crates/nixcache-proxy/src/: index.rs  main.rs  proxy.rs
crates/nixcache-worker/: Cargo.toml  README.md  wrangler.toml
crates/nixcache-worker/src/: lib.rs  oci.rs  store.rs
docs/npins/: cli.md  testing.md  usage.md
env/: default.env  flake.example.env  legacy.example.env
examples/: update-nixcache-version.yml
examples/flake/: flake.nix
examples/legacy/: default.nix
nix/: binaries.json  binary.nix  module.nix
npins/: sources.json
scripts/: load-env.sh
test/: test-e2e.sh  test-substitution.sh  test-worker.sh
