[workspace]
resolver = "3"
members = [
    "crates/nixcache-oci",
    "crates/nixcache-proxy",
    "crates/nixcache-builder",
]

[workspace.dependencies]
nixcache-oci = { path = "crates/nixcache-oci" }
axum = { version = "0.8", features = ["http2"] }
tokio = { version = "1" }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
futures-util = "0.3"
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
thiserror = "2.0"
base64 = "0.22"
