[package]
name = "nixcache-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
nixcache-oci.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
futures-util.workspace = true
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
chrono.workspace = true
num_cpus.workspace = true
clap.workspace = true
