[package]
name = "nixcache-oci"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "process"] }
thiserror.workspace = true
base64.workspace = true
tracing.workspace = true
sha2.workspace = true
tokio-util = { workspace = true, features = ["io"] }
