[package]
name = "nixcache-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
nixcache-oci.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
tracing-subscriber.workspace = true
