[package]
name = "nixcache-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.3", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
